# history

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
notebooks/: casa_grande_aerial.ipynb  casa_grande_kh9mc.ipynb  casa_grande_kh9pc.ipynb  iceland_aerial.ipynb  iceland_kh9pc.ipynb  post_process.ipynb  post_process_overview.ipynb  prepare_aux_data_casagrande.ipynb
notebooks/postprocessing/: README.md  post_process_extraction.ipynb  post_process_fknuth.ipynb  post_process_plots.ipynb  post_process_pointclouds.ipynb  post_process_with_kh9pc_highres.ipynb  post_process_workflow.ipynb
notebooks/preprocessing/: README.md  casa_grande_aerial.ipynb  casa_grande_aerial_multi_temporal.ipynb  casa_grande_kh9pc.ipynb  iceland_aerial.ipynb  iceland_aerial_multi_temporal.ipynb  iceland_aerial_multi_temporal_1980.ipynb  iceland_aerial_multi_temporal_1986.ipynb  iceland_aerial_multi_temporal_1996.ipynb  iceland_kh9mc.ipynb  iceland_kh9pc.ipynb  prepare_aux_data_casagrande.html  prepare_aux_data_casagrande.ipynb
notebooks/tutorials/aspy_bundle_adjust/: aspy_tutorial.ipynb  tools.py
scripts/: check_submissions.py  download_tools.py  prepare_aux_data_casagrande.py  prepare_aux_data_iceland.py  prepare_ref_orthomosaics.sh  wms_google_satellite.xml
scripts/archive/: CG_lidar_8bit_conversion.py  CG_lidar_8bit_conversion_dask.py  CG_lidar_8bit_conversion_dask2.py  gcp_df_conversion.py  import_markers.py
scripts/postprocessing/: config.calcul2.json  config.exemple.json  config.json  extraction.py  point2dem.py
src/history/: __init__.py  utils.py
(+50 files in other folders)
