[project]
name = "history"
version = "0.1.0"
description = "HISTORY"
authors = [{ name = "Godin Luc" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["history"]
package-dir = {"" = "src"}
